fix extra padding in header

--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -12,7 +12,7 @@
   width: 60%;
   max-width: 1080px;
   margin: auto;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .navbar {
